--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>mySiteTestChange</h1>
+        <h1>mySiteTestChange2</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/arndtniebisch/gh-pages">View the Project on GitHub <small>arndtniebisch/gh-pages</small></a></p>
